--- a/kafka/docker-compose.yaml
+++ b/kafka/docker-compose.yaml
@@ -1,12 +1,12 @@
 version: "3"
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper:7.3.0
+    image: confluentinc/cp-zookeeper:latest
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
 
   kafka:
-    image: confluentinc/cp-kafka:7.3.0
+    image: confluentinc/cp-kafka:latest
     depends_on:
       - zookeeper
     ports:
