feat: transactions crude

--- a/nest-back-end/docker-compose.yaml
+++ b/nest-back-end/docker-compose.yaml
@@ -10,9 +10,8 @@ services:
       - 'host.docker.internal:host-gateway'
 
   db:
-    image: postgres:9.4
+    image: postgres:13-alpine
     environment:
       POSTGRES_PASSWORD: root
-      POSTGRES_DB: nest
     volumes:
       - .docker/postgres/init.sql:/docker-entrypoint-initdb.d/init.sql
