--- a/nest-back-end/package.json
+++ b/nest-back-end/package.json
@@ -17,10 +17,11 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "console": "ts-node -r tsconfig-paths/register src/console.ts"
   },
   "dependencies": {
-    "@grpc/grpc-js": "^1.9.7",
+    "@grpc/grpc-js": "^1.9.5",
     "@grpc/proto-loader": "^0.7.10",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
@@ -29,10 +30,13 @@
     "@nestjs/microservices": "^10.2.7",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/typeorm": "^10.0.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "kafkajs": "^2.2.4",
+    "nestjs-console": "^9.0.0",
     "pg": "^8.11.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "source": "^0.0.3",
     "typeorm": "^0.3.17"
   },
   "devDependencies": {
